Updated for publishing

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Clipboard History",
     "description": "Keep a history of your copied items and re-paste if needed",
     "version": "1.0.2",
-    "publisher": "Anjali Fernandes",
+    "publisher": "Anjali",
     "license": "LICENSE.md",
     "icon": "logo.png",
     "bugs": {
