--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
                     "type": "integer",
                     "minimum": 1,
                     "default": 12,
-                    "description": "Maximum number of items saved in clipboard"
+                    "description": "Maximum number of items saved in clipboard",
+                    "pasteBehavior": "keepLastPaste"
                 }
             }
         },
